[tool.poetry]
name = "katananodling"
version = "1.1.5"  # version has to be kept in sync with ./katananodling/c.py
description = "API to create and register custom nodes in Katana."
license = "Apache-2.0"
authors = ["Liam Collod <lcollod@gmail.com>"]
readme = "README.md"
repository = "https://github.com/MrLixm/katananodling"
keywords = ["vfx", "nodegraph", "custom"]

[tool.poetry.dependencies]
python = ">=2.7"

[tool.poetry.group.dev.dependencies]
python = ">=3.6.2"
black = "*"

[tool.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
